Make overflow hidden and fix some style issues

--- a/src/app/pages/about-me/about-me.component.scss
+++ b/src/app/pages/about-me/about-me.component.scss
@@ -6,6 +6,7 @@
     padding: 120px 16% 90px;
     width: 100%;
     position: relative;  
+    height: 80vh;
 }
 
 .about-text{
