--- a/src/app/pages/my-project/my-project.component.scss
+++ b/src/app/pages/my-project/my-project.component.scss
@@ -6,4 +6,5 @@
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
+    height: 80vh;
 }
