--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,7 +11,7 @@
   scroll-behavior: smooth;
   background-color: color(dark-body);
   color: color(light);
-//   overflow: hidden;
+  overflow: hidden;
 }
 
 section {
